# PFE_Eurobot_2026

./: .gitconfig  .gitignore  .gitmodules  README.md  power_monitor.py  ws.code-workspace
.cache/Microsoft/DeveloperTools/: deviceid
.devcontainer/: Dockerfile  devcontainer.json
devcontainer/: Dockerfile_gazebo  Dockerfile_remote  Dockerfile_robot  Start-container.bash  linux.bash  wsl.bash
docker/: Dockerfile  start_docker.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/nav2/share/nav2/: local_setup.sh  package.sh  package.xml
log/: latest_build
pio/: .gitignore  platformio.ini
pio/extra_packages/custom_msgs/msg/: Blocks.msg  DeadwheelTicks.msg
pio/extra_packages/deadwheel_msgs/msg/: DeadwheelTicks.msg
pio/src/: main.cpp  test.cpp
pio/src/Manipulation/: main.cpp
pio/src/alimentation/: Alimentation_Pinout.h  main.cpp
pio/src/deadwheels/: main.cpp
pio/src/driver/: MotorDriver.cpp  MotorDriver.h  main.cpp
pio/src/encoder/: main.cpp
pio/src/encoder_test/: encoder_test.cpp
pio/src/entrainement/: MotorDriver.cpp  deadwheels.cpp  deadwheels.h  main.cpp
pio/src/manipulation/: BlockManager.cpp  BlockManager.h  HardwareManager.cpp  HardwareManager.h  main.cpp
pio/src/manipulation_test/: main.cpp
pio/src/test_pub/: main.cpp
robot_ws/custom_msgs/: CMakeLists.txt  package.xml
server_ws/: .gitignore
server_ws/src/bringup/: package.xml  setup.py
server_ws/src/bringup/bringup/: cluster_goal_bridge.py
server_ws/src/bringup/config/: camera_global_map.rviz  ekf1.yaml  ekf2.yaml
server_ws/src/bringup/launch/: robot_perception.launch.py
server_ws/src/camera_localization/: CMakeLists.txt
server_ws/src/camera_localization/src/: camera_localization_node.cpp  global_localization_node.cpp
server_ws/src/deadwheel_odometry/: package.xml
server_ws/src/nav2/: CMakeLists.txt  README.md
server_ws/src/nav2/launch/: nav2_simple_launch.py
server_ws/src/nav2_all_bringups/: package.xml
server_ws/src/nav2_all_bringups/config/: nav2_no_lidar.yaml
server_ws/src/nav2_all_bringups/launch/: full_nav2.launch.py  odom_nav2.launch.py
server_ws/src/pfe/: package.xml  setup.cfg  setup.py
server_ws/src/pfe/calibration/: capture_chessboard.py
server_ws/src/pfe/description/: example_gazeo.urdf.xacro
server_ws/src/pfe/launch/: display_launch.py
server_ws/src/pfe/meshes/: arm_link-v1.stl  flipper_link-v1.stl  suctioncup_link-v1.stl
server_ws/src/pfe/ros2_opencv/: debug.txt  (+2 more)
sklearn-env/: pyvenv.cfg
ws/: .gitignore  fake_ticks.py
ws/src/alimentation/: CMakeLists.txt  package.xml
ws/src/bringup/: package.xml  setup.py
ws/src/camera_global/: CMakeLists.txt  camera_externe.cpp
ws/src/camera_localization/: CMakeLists.txt  package.xml
ws/src/camera_localization/src/: camera_localization_node.cpp  fake_camera_localization_node.cpp  global_localization_node.cpp
ws/src/deadwheel_msgs/: CMakeLists.txt
ws/src/deadwheel_odometry/: CMakeLists.txt  package.xml
ws/src/encoder_test/: encoder_test.cpp
ws/src/install/: local_setup.sh  setup.sh
ws/src/log/: latest_build
ws/src/nav2_all_bringups/: setup.py
ws/src/nav2_odom_bringup/: package.xml  setup.cfg  setup.py
ws/src/pfe/: package.xml  setup.py
(+143 files in other folders)
